1. Email authentication added 2. Duplicate email check during registration 3. User profile page html modified

--- a/templates/register.html
+++ b/templates/register.html
@@ -58,6 +58,9 @@
                                                             <div class="clear"></div>
                                                         </form> 
                                                         {{form.errors}}
+                                                        {% for message in messages %}
+                                                                <p class="text-danger mt-3">{{message}}</p>
+                                                        {% endfor %}
                                                     </div>
                                                                                                                                  
                                                 </div>
