--- a/templates/general_template.html
+++ b/templates/general_template.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
 
         <!-- Title -->
-        <title>..:: LIBRARIA ::..</title>
+        <title>..:: My-Library ::..</title>
 
         <!-- Favicon -->
         <link href="{% static 'images/favicon.ico' %}" rel="icon" type="image/x-icon" />
@@ -26,8 +26,9 @@
         <!-- Stylesheet -->
         <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
 
-        <!-- HTML5 shim and Respond.js' %} for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js' %} doesn't work if you view the page via file:// -->
+        <!-- Flashy CSS -->
+        <link rel="stylesheet" type="text/css" href="{% static 'css/flashy/flashy.min.css' %}">
+
    
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -365,8 +366,14 @@
         
   
         <!-- jQuery Latest Version 1.x -->
-        <script type="text/javascript" src="{% static 'js/jquery-1.12.4.min.js' %}"></script>
+        {% comment %} <script type="text/javascript" src="{% static 'js/jquery-1.12.4.min.js' %}"></script> {% endcomment %}
         
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+        <!-- Font Awesome 4-->
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
         <!-- jQuery UI -->
         <script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
         
@@ -416,7 +423,11 @@
         <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 
         <!-- Script for flash messages -->
-        
+
+       
+
+        <!-- Flashy JS -->
+        <script src="{% static 'js/external/flashy.min.js' %}"></script>
 
         <!---- script by masamad.sust@gmail.com -->
         <script type="text/javascript" src="{% static 'js/custom_js/cart.js' %}"></script>
