1. most of pages are now using base template. base.html deleted 2. Books page filters redesigned 3. All select type input style changed 4. Userprofile update template is now using the general template

--- a/templates/books.html
+++ b/templates/books.html
@@ -10,22 +10,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-9 col-md-push-3">
-                                    <div class="filter-options margin-list">
-                                        <div class="row">                                            
-                                            <div class="col-md-4 col-sm-4">
-                                                <select name="orderby">
-                                                    <option selected="selected">Default sorting</option>
-                                                    <option>Sort by popularity</option>
-                                                    <option>Sort by rating</option>
-                                                    <option>Sort by newness</option>
-                                                </select>
-                                            </div>
-                                            <div class="col-md-4 col-sm-4">
-                                                <div class="filter-result">Showing items 1 to 9 of 19 total</div>
-                                            </div>
-                                            
-                                        </div>
-                                    </div>
+                                    <span></span>
                                     <div class="books-gird">
                                         <ul>
                                         
@@ -41,33 +26,9 @@
                                                 <div class="book-list-icon blue-icon"></div>
                                                 <div class="single-book-box">
                                                     <div class="post-detail">
-                                                        <div class="books-social-sharing">
-                                                            <ul>
-                                                                <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                                                <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                                                <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                                                            </ul>
-                                                        </div>
-                                                        <div class="optional-links">
-                                                            <ul>
-                                                                <li>
-                                                                    <span href="" rel="nofollow" data-product={{book.id}} data-action="add" class="update-cart" data-toggle="blog-tags" data-placement="top" title="Add TO CART">
-                                                                        <i class="fa fa-shopping-cart"></i>
-                                                                    </span>
-                                                                </li>
-                                                                <li>
-                                                                    <a href="" target="_blank" data-toggle="blog-tags" data-placement="top" title="Like">
-                                                                        <i class="fa fa-heart"></i>
-                                                                    </a>
-                                                                </li>
-                                                                <li>
-                                                                    <a href="" target="_blank" data-toggle="blog-tags" data-placement="top" title="Mail"><i class="fa fa-envelope"></i>
-                                                                    </a>
-                                                                </li>
-                                                            </ul>
-                                                        </div>
+                                                        
                                                         <header class="entry-header">
-                                                            <h3 class="entry-title"><a href="books-media-detail-v1.html">The Great Gatsby</a></h3>
+                                                            <h3 class="entry-title"><a href="books-media-detail-v1.html">{{book.name}}</a></h3>
                                                             <ul>
                                                                 <li><strong>Author:</strong> {{book.author}} </li>
                                                                 <li><strong>Publisher:</strong> {{book.publisher}}</li>
@@ -78,6 +39,9 @@
                                                         </div>
                                                         <footer class="entry-footer">
                                                             <a class="btn btn-primary" href="#">Read More</a>
+                                                            <button href="" rel="nofollow" data-product={{book.id}} data-action="add" class="update-cart" data-toggle="blog-tags" data-placement="top" title="Add TO CART">
+                                                                <i class="fa fa-shopping-cart"></i>
+                                                            </button>
                                                         </footer>
                                                     </div>
                                                 </div>                                       
