--- a/templates/user_profile_update.html
+++ b/templates/user_profile_update.html
@@ -1,7 +1,7 @@
-{% extends 'admin_base.html' %}
+{% extends 'general_template.html' %}
 {% load static %}
     
-{% block admin_base %}
+{% block general_template %}
         <!-- Start: Cart Section -->
         <div id="content" class="site-content">
             <div id="primary" class="content-area">
@@ -34,4 +34,4 @@
         </div>
         <!-- End: Cart Section -->
         
- {% endblock admin_base %}
+ {% endblock general_template %}
