--- a/mylibrary/static/css/style.css
+++ b/mylibrary/static/css/style.css
@@ -4075,8 +4075,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav > li > a:hover,
 .nav > li > a:focus {
-  text-decoration: none;
-  background-color: #eeeeee;
+  text-decoration: underline;
+  background-color: #72dc6f;
+  box-shadow: #e962c0;
 }
 .nav > li.disabled > a {
   color: #cfcfcf;
@@ -4255,7 +4256,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   position: relative;
   min-height: 50px;
   margin-bottom: 20px;
-  border: 1px solid transparent;
 }
 @media (min-width: 768px) {
   .navbar {
@@ -7195,7 +7195,7 @@ button {
   -ms-user-select: none;
   user-select: none;
   font-size: 16px;
-  padding: 10px 28px 11px;
+  /* padding: 10px 28px 11px; */
   text-transform: uppercase;
   overflow: visible;
 }
@@ -8242,14 +8242,14 @@ a:focus {
 }
 .navbar-wrapper {
   left: 0;
-  position: absolute;
+  /* position: absolute; */
   right: 0;
   top: 100px;
   z-index: 99;
 }
 @media (max-width: 1499px) {
   .navbar-wrapper {
-    top: 30px;
+    top: 0px;
   }
 }
 .navbar-wrapper .navbar-default {
@@ -8258,7 +8258,6 @@ a:focus {
   margin-bottom: 0;
 }
 .navbar-wrapper .navbar-default .navbar-collapse {
-  border-bottom: 1px solid #504d4c;
   border-top: 1px solid #504d4c;
   padding: 0;
 }
@@ -8267,11 +8266,11 @@ a:focus {
 }
 @media (max-width: 1499px) {
   .inner-navbar-wrapper {
-    top: 30px;
+    top: 0px;
   }
 }
 .navbar-nav li {
-  padding: 13px 32px;
+  padding: 0px;
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .navbar-nav li {
@@ -8280,7 +8279,7 @@ a:focus {
 }
 .navbar-nav li a {
   font-size: 14px;
-  padding: 0;
+  padding: 12px 20px;
   text-transform: uppercase;
 }
 .navbar-nav li.dropdown:hover > a {
@@ -8891,6 +8890,7 @@ a:focus {
   border-style: solid;
   float: left;
   width: 100%;
+  background-color: #000000bf;
 }
 .layout-v3 .menu-wrap .navbar-header {
   width: 19.5%;
@@ -9356,7 +9356,11 @@ a:focus {
   margin: 0 0 40px;
 }
 .widget select {
-  max-width: 100%;
+  width: 100%;
+  display: block;
+  height: 40px;
+  padding: 0px 20px;
+  background: whitesmoke;
 }
 /*--------------------------------------------------------------
 12. Layouts
@@ -13605,7 +13609,7 @@ a:focus {
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 400px;
+  /* min-height: 400px; */
   position: relative;
   text-align: center;
 }
@@ -13683,7 +13687,7 @@ a:focus {
   margin-bottom: 0;
 }
 .checkout-main {
-  padding: 100px 0 0;
+  padding: 10px 0 0;
 }
 @media (max-width: 767px) {
   .checkout-main {
@@ -16557,7 +16561,8 @@ a:focus {
   color: #282828;
 }
 .single-book-box .post-detail {
-  background-color: #fff;
+  background-color: #f5f5f5;
+  border: 2px groove #f5cc1f;
   display: inline-block;
   position: absolute;
   right: -10px;
@@ -16969,8 +16974,8 @@ a:focus {
   }
 }
 .books-gird .single-book-box .post-detail {
-  left: 52px;
-  width: 430px;
+  left: 0;
+  width: 380px;
   z-index: 9999;
 }
 @media (max-width: 1199px) {
