--- a/templates/general_template.html
+++ b/templates/general_template.html
@@ -28,12 +28,7 @@
 
         <!-- Flashy CSS -->
         <link rel="stylesheet" type="text/css" href="{% static 'css/flashy/flashy.min.css' %}">
-
-   
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    
-        <script>
+      <script>
             var current_user = '{{request.user}}';
 
             function getToken(name) {
@@ -55,157 +50,96 @@
         </script>
     </head>
 
-    <body>
-
-        <!-- Start: Header Section -->
-        <header id="header-v1" class="navbar-wrapper inner-navbar-wrapper">
-            <div class="container">
+    <body class="layout-v3">
+        <header id="header" class="navbar-wrapper">
+            <div class="container-fluid">
                 <div class="row">
                     <nav class="navbar navbar-default">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <div class="navbar-header">
-                                    <div class="navbar-brand">
-                                        <h1>
-                                            <a href="/">
-                                                <img src="{% static 'images/libraria-logo-v1.png' %}" alt="LIBRARIA" />
-                                            </a>
-                                        </h1>
-                                    </div>
+                        <div class="menu-wrap">
+                            <div class="navbar-header">
+                                <div class="navbar-brand">
+                                    <h1>
+                                        <a href="{% url 'home' %}">
+                                            <img src="{% static 'images/libraria-logo-v3.png' %}" alt="LIBRARIA" />
+                                        </a>
+                                    </h1>
                                 </div>
                             </div>
-                            <div class="col-md-9">
+                            <!-- Navigation -->
+                            <div class="navbar-collapse hidden-sm hidden-xs">
+                                <ul class="nav navbar-nav">
+                                    <li><a href="/">Home</a></li>
+                                    <li><a href="/books">Books</a></li>
+                                    
+                                </ul>
                                 <!-- Header Topbar -->
-                                <div class="header-topbar hidden-sm hidden-xs">
-                                    <div class="row">
-                                        <div class="col-sm-6">
-                                            <div class="topbar-info">
-                                                <a href="tel:+61-3-8376-6284"><i class="fa fa-phone"></i>+61-3-8376-6284</a>
-                                                <span>/</span>
-                                                <a href="mailto:support@libraria.com"><i class="fa fa-envelope"></i>support@libraria.com</a>
-                                            </div>
+                                <div class="header-topbar hidden-md">
+                                    <div class="topbar-links">
+                                        {% if not request.user.is_authenticated %}
+                                            <a href="{% url 'login' %}"><i class="fa fa-lock"></i>Login</a> <span> </span>
+                                            <a href="{% url 'register' %}"><i class="fa fa-user-circle-o"></i>Register</a>
+                                        {% else %}
+                                        
+                                        <div class="header-cart dropdown">
+                                            <span>|</span>
+                                            <a href="{% url 'logout' %}"><i class="fa fa-lock"></i>Logout</a>
                                         </div>
-                                        <div class="col-sm-6">
-                                            <div class="topbar-links">
-                                                
-                                                {% if not request.user.is_autheticated %}
-                                                    <a href="{% url 'login' %}"><i class="fa fa-lock"></i>Login / Register</a>
-                                                {% endif %}
-                                                    
-                                                <span>|</span>
-                                                <div class="header-cart dropdown">
-                                                    <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                                                        <i class="fa fa-shopping-cart"></i>
-                                                        <small>0</small>
-                                                    </a>
-                                                    <div class="dropdown-menu cart-dropdown">
-                                                        <ul>
-                                                            <li class="clearfix">
-                                                                <img src="{% static 'images/header-cart-image-01.jpg' %}" alt="cart item" />
-                                                                <div class="item-info">
-                                                                    <div class="name">
-                                                                        <a href="#">The Great Gatsby</a>
-                                                                    </div>
-                                                                    <div class="author"><strong>Author:</strong> F. Scott Fitzgerald</div>
-                                                                    <div class="price">1 X $10.00</div>
-                                                                </div>
-                                                                <a class="remove" href="#"><i class="fa fa-trash-o"></i></a>
-                                                            </li>
-                                                            <li class="clearfix">
-                                                                <img src="{% static 'images/header-cart-image-02.jpg' %}" alt="cart item" />
-                                                                <div class="item-info">
-                                                                    <div class="name">
-                                                                        <a href="#">The Great Gatsby</a>
-                                                                    </div>
-                                                                    <div class="author"><strong>Author:</strong> F. Scott Fitzgerald</div>
-                                                                    <div class="price">1 X $10.00</div>
-                                                                </div>
-                                                                <a class="remove" href="#"><i class="fa fa-trash-o"></i></a>
-                                                            </li>
-                                                            <li class="clearfix">
-                                                                <img src="{% static 'images/header-cart-image-03.jpg' %}" alt="cart item" />
-                                                                <div class="item-info">
-                                                                    <div class="name">
-                                                                        <a href="#">The Great Gatsby</a>
-                                                                    </div>
-                                                                    <div class="author"><strong>Author:</strong> F. Scott Fitzgerald</div>
-                                                                    <div class="price">1 X $10.00</div>
-                                                                </div>
-                                                                <a class="remove" href="#"><i class="fa fa-trash-o"></i></a>
-                                                            </li>
-                                                        </ul>
-                                                        <div class="cart-total">
-                                                            <div class="title">SubTotal</div>
-                                                            <div class="price">$30.00</div>
-                                                        </div>
-                                                        <div class="cart-buttons">
-                                                            <a href="cart.html" class="btn btn-dark-gray">View Cart</a>
-                                                            <a href="checkout.html" class="btn btn-primary">Checkout</a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
+
+                                        <div class="header-cart dropdown">
+                                            <span>|</span>
+                                            <a href="{% url 'user-profile' %}">
+                                                <i class="fa fa-user-circle-o"></i>Pofile
+                                            </a>
+                                            
                                         </div>
+                                        <div class="header-cart dropdown">
+                                            
+                                            <a href="{% url 'cart' %}">
+                                                <i class="fa fa-shopping-cart"></i>Cart
+                                            </a>
+                                        </div>
+                                        {% endif %}
                                     </div>
                                 </div>
-                                <div class="navbar-collapse hidden-sm hidden-xs">
-                                    <ul class="nav navbar-nav">
-                                        <li>
-                                            <a data-toggle="dropdown" class="dropdown-toggle disabled" href="/">Home</a>
-                                        </li>
-                                        <li>
-                                            <a data-toggle="dropdown" class="dropdown-toggle disabled" href="/books">Books</a>
-                                        </li>
-                                        <li>
-                                            <a data-toggle="dropdown" class="dropdown-toggle disabled" href="/register">Register</a>
-                                        </li>
-                                        <li>
-                                            <a data-toggle="dropdown" class="dropdown-toggle disabled" href="/login">Login</a>
-                                        </li>
-                                        <li class="dropdown">
-                                            <a data-toggle="dropdown" class="dropdown-toggle disabled" href="#">Pages</a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="cart.html">Cart</a></li>
-                                                <li><a href="checkout.html">Checkout</a></li>
-                                                <li><a href="signin.html">Signin/Register</a></li>
-                                                <li><a href="404.html">404/Error</a></li>
+                                <!-- Header Topbar -->
+                            </div>
+                            <div class="header-socialbar hidden-sm hidden-xs">
+                                <ul class="social-links">
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#">01944676493</a></li>
+                                </ul>
+                                <ul class="share-links">
+                                    <li class="dropdown">
+                                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                                            <i class="fa fa-share"></i>
+                                        </a>
+                                        <div class="dropdown-menu social-dropdown">
+                                            <ul>
+                                                <li><a href="#">01944676493</a></li>
+                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                                             </ul>
-                                        </li>
-                                       
-                                    </ul>
-                                </div>
+                                        </div>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                        <div class="mobile-menu hidden-lg hidden-md">
-                            <a href="#mobile-menu"><i class="fa fa-navicon"></i></a>
+                        <div class="mobile-menu hidden-md hidden-lg">
+                        <a href="#mobile-menu"><i class="fa fa-navicon"></i></a>
                             <div id="mobile-menu">
                                 <ul>
                                     <li class="mobile-title">
                                         <h4>Navigation</h4>
                                         <a href="#" class="close"></a>
                                     </li>
+                                    
                                     <li>
                                         <a href="index-2.html">Home</a>
                                         <ul>
                                             <li><a href="index-2.html">Home V1</a></li>
-                                            
                                         </ul>
                                     </li>
-                                    <li>
-                                        <a href="books-media-list-view.html">Books &amp; Media</a>
-                                        <ul>
-                                            <li><a href="books-media-list-view.html">Books &amp; Media List View</a></li>
-                                            <li><a href="books-media-gird-view-v1.html">Books &amp; Media Grid View V1</a></li>
-                                           
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a href="news-events-list-view.html">News &amp; Events</a>
-                                        <ul>
-                                            <li><a href="news-events-list-view.html">News &amp; Events List View</a></li>
-                                            <li><a href="news-events-detail.html">News &amp; Events Detail</a></li>
-                                        </ul>
-                                    </li>
+                                                                   
                                     <li>
                                         <a href="#">Pages</a>
                                         <ul>
@@ -227,25 +161,6 @@
                 </div>
             </div>
         </header>
-        <!-- End: Header Section -->
-
-        <!-- Start: Page Banner -->
-        <section class="page-banner services-banner">
-            <div class="container">
-                <div class="banner-header">
-                    <h2>Books & Media Listing</h2>
-                    <span class="underline center"></span>
-                    <p class="lead">Proin ac eros pellentesque dolor pharetra tempo.</p>
-                </div>
-                <div class="breadcrumb">
-                    <ul>
-                        <li><a href="index-2.html">Home</a></li>
-                        <li>Books & Media</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-        <!-- End: Page Banner -->
 
 {% block general_template %}
     
