--- a/templates/general_template.html
+++ b/templates/general_template.html
@@ -25,6 +25,7 @@
 
         <!-- Stylesheet -->
         <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css" />
 
         <!-- Flashy CSS -->
         <link rel="stylesheet" type="text/css" href="{% static 'css/flashy/flashy.min.css' %}">
@@ -60,7 +61,7 @@
                                 <div class="navbar-brand">
                                     <h1>
                                         <a href="{% url 'home' %}">
-                                            <img src="{% static 'images/libraria-logo-v3.png' %}" alt="LIBRARIA" />
+                                            <img src="{% static 'images/logo.png' %}" alt="MY LIBRARY" />
                                         </a>
                                     </h1>
                                 </div>
