--- a/templates/home.html
+++ b/templates/home.html
@@ -22,30 +22,11 @@
                             <h2>Welcome to La Bibliotheque Library</h2>
                             <p>La Bibliotheque gives you access to vast amount of <strong>Books, Magazines, and Newspapers</strong></p>
                             <div class="filter-box">
-                                <form action="http://libraria.demo.presstigers.com/index.html" class="banner-filter-box" method="get">
+                                <form action="{% url 'books' %}">
+                                {% csrf_token %}
                                     <div class="form-group">
-                                        <label class="sr-only" for="keywords">Search by Keyword</label>
-                                        <input class="form-control" placeholder="Search by Keyword" id="keywords" name="keywords" type="text">
-                                    </div>
-                                    <div class="form-group">
-                                        <select name="catalog" id="catalog" class="form-control">
-                                            <option>Search the Catalog</option>
-                                            <option>Catalog 01</option>
-                                            <option>Catalog 02</option>
-                                            <option>Catalog 03</option>
-                                            <option>Catalog 04</option>
-                                            <option>Catalog 05</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <select name="category" id="category" class="form-control">
-                                            <option>All Categories</option>
-                                            <option>Category 01</option>
-                                            <option>Category 02</option>
-                                            <option>Category 03</option>
-                                            <option>Category 04</option>
-                                            <option>Category 05</option>
-                                        </select>
+                                        <p class='text-center'> Search By Book Name  <i class="fa fa-arrow-down" aria-hidden="true"></i> </p>
+                                        {{book_filter.form.name}}
                                     </div>
                                     <div class="clearfix"></div>
                                     <input class="form-control" type="submit" value="Search">
